# Snaketron

./: .dockerignore  .gitignore  CLAUDE.md  CODEDEPLOY_UPDATE.md  CODEX.md  Cargo.toml  DEBUGGING.md  DEPLOYMENT_SUMMARY.md  MIGRATION_SUMMARY.md  PORT_CONFIGURATION.md  RAFT_REMOVAL_COMPLETED.md  RAFT_REMOVAL_TODO.md  README.md  SETUP_GITHUB_ACTION.md  STREAMS_MIGRATION.md  dev.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  github-action-test-simple-game.yml  localstack-init.sh  package-lock.json  run_autoscaling_resilience_tests.sh  run_matchmaking_tests.sh  run_quickmatch_tests.sh  test-deps.sh  test-simple-game-workflow.yml  test_matchmaking_debug.sh  test_rate_limit.sh  test_redis_reconnect.sh  test_transitioning_fix.rs
.cargo/: config.toml
bot/: Cargo.toml
bot/src/: main.rs
client/: CLAUDE.md  Cargo.toml
client/src/: lib.rs  render.rs
client/web/: .gitignore  App.jsx  App.tsx  CLAUDE.md  LATENCY_TESTING_GUIDE.md  PLAYWRIGHT_TEST_RESULTS.md  SOLO_GAME_FIX_SUMMARY.md  babel.config.js  bootstrap.js  bootstrap.ts  constants.ts  global.d.ts  index.css  index.html  index.ts  main.jsx  main.tsx  package-lock.json  package.json  playwright.config.js  playwright.drain.config.js  run-solo-tests.sh  test-simple.ts  tsconfig.json  wasm-snaketron.d.ts  webpack.config.js
client/web/components/: AnimatedRoutes.jsx  AnimatedRoutes.tsx  ArenaBackdrop.tsx  Auth.tsx  AuthModal.jsx  AuthModal.tsx  AuthPage.jsx  CustomGameCreator.jsx  CustomGameCreator.tsx  GameArena.tsx  GameLobby.jsx  GameLobby.tsx  GameModeSelector.jsx  GameModeSelector.tsx  GameStartForm.tsx  HomeHeader.tsx  Icons.jsx  Icons.tsx  InviteFriendsModal.tsx  JoinGameModal.jsx  JoinGameModal.tsx  LatencySettings.tsx  Leaderboard.tsx  LoadingScreen.tsx  LobbyChat.tsx  LobbyInvitePage.tsx  MatchmakingBanner.tsx  MobileHeader.tsx  NewHome.tsx  NewsAndLeaderboard.tsx  ProtectedRoute.jsx  ProtectedRoute.tsx  Queue.tsx  RegionSelector.tsx  Scoreboard.tsx  Sidebar.tsx  SocialFooter.tsx  Spinner.tsx  UsernameAuth.jsx  UsernameAuth.tsx
client/web/contexts/: AuthContext.jsx  AuthContext.tsx  LatencyContext.tsx  UIContext.tsx  WebSocketContext.jsx  WebSocketContext.tsx
client/web/hooks/: useDebounce.ts  useDebouncedValue.js  useGameEngine.ts  useGameWebSocket.js  useGameWebSocket.ts  useNavigateWithDebounce.ts  useRegions.ts
client/web/public/: client.d.ts  client.js  client_bg.js  client_bg.wasm  client_bg.wasm.d.ts
client/web/services/: api.js  api.ts  gameCommandOutbox.ts  websocketLifecycle.ts
client/web/tests/: README.md  check-ws-connection.test.js  debug-messages.test.js  debug-solo.spec.js  debug-ws.test.js  headless-check.spec.js  simple-connection.spec.js  solo-game-final.spec.js  solo-game-headless.spec.js  solo-game-robust.spec.js  solo-game-working.spec.js  solo-game.spec.js
client/web/tests/e2e/: classic-solo-game-final.test.js
client/web/tests/e2e/fixtures/: test-environment.js
client/web/tests/e2e/specs/: create-custom-game-simple.spec.js  create-custom-game.spec.js  planned-websocket-drain.spec.js  solo-game-debug.spec.js  solo-game-simple.spec.js  solo-game.spec.js
client/web/tests/integration/: websocket-connection.test.js  websocket-simple.test.js
client/web/tests/unit/: clockSync.test.ts  gameCommandOutbox.test.ts  websocketLifecycle.test.ts
client/web/types/: index.ts
client/web/utils/: clockSync.ts  gameId.ts  lobbyPreferencesStorage.ts  regionPreference.ts  syncTrace.ts
common/: Cargo.toml
common/macros/: Cargo.toml
common/macros/src/: lib.rs
common/src/: ai.rs  constants.rs  fingerprint.rs  game.rs  game_engine.rs  game_state.rs  lib.rs  replay.rs  snake.rs  trace.rs  util.rs
server/: Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod  LEADER_ELECTION_USAGE.md  README.md  build.rs  docker-readme.md
server/migrations/: V1__initial.sql  V2__distributed_servers.sql  V3__cascade_deletes.sql
server/proto/: game_relay.proto  stream_exchange.proto
server/src/: authority_transfer.rs  cluster_membership.rs  cluster_singleton.rs  completion.rs  db_migration_patches.md  executor_cluster.rs  game_broker.rs  game_bus.rs  game_cleanup.rs  game_discovery.rs  game_executor.rs  game_executor_v2.rs  game_manager.rs  game_server.rs  games_manager.rs  grpc_server.rs  grpc_stub.rs  http_server.rs  ip_discovery.rs  leader_election.rs  learner_join.rs  lib.rs  lifecycle.rs  lobby_manager.rs  main.rs  matchmaking.rs  matchmaking_manager.rs  mmr_persistence.rs  partition_assignment.rs  partition_lease.rs  player_connections.rs  pubsub_manager.rs  recovery.rs  redis_keys.rs  redis_utils.rs  region_cache.rs  replica_manager.rs  replication.rs  resilience_metrics.rs  season.rs  (+7 more)
server/src/api/: auth.rs  jwt.rs  leaderboard.rs  middleware.rs  mod.rs  rate_limit.rs  regions.rs  server.rs
server/src/db/: dynamodb.rs  mod.rs  models.rs  queries.rs
server/src/raft/: mod.rs  network.rs  state_machine.rs  storage.rs  types.rs
server/src/replay/: directory.rs  listener.rs  mod.rs  recorder.rs
server/tests/: completed_game_snapshot_tests.rs  completion_idempotency_tests.rs  distributed_broker_tests.rs  duel_game_test.rs  event_delivery_tests.rs  executor_process_chaos_tests.rs  executor_resume_test.rs  food_endzone_test.rs  game_bus_test.rs  game_cleanup_tests.rs  game_load_failure_tests.rs  lobby_matchmaking_tests.rs  matchmaking_integration_tests.rs  multi_server_integration_tests.rs  rate_limit_test.rs  replay_test.rs  simple_game_test.rs  solo_game_play_again_test.rs  solo_game_test.rs  sync_equivalence_test.rs  websocket_tests.rs
server/tests/common/: mock_jwt.rs  mod.rs  test_client.rs  test_database.rs  test_environment.rs  test_server.rs
terminal/: Cargo.toml
terminal/examples/: color_render_demo.rs  render_demo.rs
terminal/src/: app.rs  lib.rs  main.rs
terminal/src/render/: arena.rs  mod.rs  snake.rs  standard_renderer.rs  traits.rs  types.rs
terminal/src/replay/: mod.rs  player.rs  reader.rs
terminal/src/views/: mod.rs  replay_selector.rs  replay_viewer.rs
terminal/tests/: render_test.rs  replay_player_test.rs  snake_expansion_test.rs
(+101 files in other folders)
