[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
common = { path = "../common" }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
server = { path = "../server" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net", "sync"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tungstenite = "0.23"
url = "2"
uuid = { version = "1", features = ["v4"] }
