[package]
name = "client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../common" }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.77"
features = ['CanvasRenderingContext2d', 'Document', 'Element', 'HtmlCanvasElement', 'Window', 'console']
