[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
macros = { path = "../macros" }
anyhow = "1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize", "std"] }
serde = { version = "1.0.219", features = ["derive"] }
quote = "1.0.40"
syn = "2.0.100"
serde_json = "1"
log = { version = "0.4", features = ["std"] }
