[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "*"
tokio-tungstenite = "*"
tungstenite = "*"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
refinery = { version = "0.8" , features = ["tokio-postgres"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
dotenv = "0.15"
once_cell = "1"
url = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
gethostname = "1"