[package]
name = "server"
version = "0.1.0"
edition = "2024"

[features]
default = []
skip-proto = []

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "*"
tokio-tungstenite = "*"
tungstenite = "*"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.19.0"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
dotenv = "0.15"
once_cell = "1"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }
gethostname = "1"
tonic = "0.12.3"
tokio-stream = { version = "0.1", features = ["sync"] }
prost = "0.13.5"
async-trait = "0.1"
jsonwebtoken = "9.3"
bincode = { version = "2.0", features = ["serde"] }
flate2 = "1.0"
rand = "0.8"
# HTTP API dependencies
axum = { version = "0.7", features = ["tokio", "ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
# Password hashing
bcrypt = "0.15"
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
skillratings = "0.27"
indexmap = "2"

[build-dependencies]
tonic-build = { version = "0.12.3", features = ["prost"] }
prost-build = "0.13.5"

[dev-dependencies]
jsonwebtoken = "9.3"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }