[package]
name = "snaketron"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "snaketron"
path = "src/main.rs"