[package]
name = "snaketron-terminal"
version = "0.1.0"
edition = "2021"

[lib]
name = "terminal"
path = "src/lib.rs"

[[bin]]
name = "snaketron-terminal"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }